# cifar10_deep

./: .stestr.conf  Jenkinsfile  LICENSE  README.md  setup.cfg  tox.ini
cifar10_deep/dataset/: make_dataset.py
cifar10_deep/features/: build_features.py
cifar10_deep/models/: deepaas_api.py
cifar10_deep/tests/: test_unit_model.py
cifar10_deep/visualization/: visualize.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-cifar10_deep_start.py2.ipynb  1.0-cifar10_deep_start.py3.ipynb
