[metadata]
name = cifar10_deep
summary = CIFAR10 with DEEPaaS API
description-file =
    README.md
author = L.Lloret, V.Kozlov
author-email = valentin.kozlov@kit.edu
version = 0.0.0
license = MIT
home-page = https://github.com/vykozlov/cifar10_deep
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5


[files]
packages =
    cifar10_deep

[entry_points]

deepaas.model = 
    cifar10_deep = cifar10_deep.models.deepaas_api

